<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/tennis"
    tools:context="com.example.android.tennisscorekeeper.MainActivity">
<!-- child LinearLayout#1 container for the image only -->
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="151dp"
        android:scaleType="fitXY"
        android:contentDescription="@string/app_name"
        android:src="@drawable/federervsnada"/>
</LinearLayout>
<!-- child LinearLayout#2 to show the player name horizontally -->
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <TextView
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:textSize="20sp"
        android:text="@string/federer"/>
    <TextView
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:textSize="20sp"
        android:text="@string/nadal"/>
</LinearLayout>
<!-- child LinearLayout#4 for the main points -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/fBoardPoints"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingBottom="30dp"
            android:textSize="50sp"
            android:gravity="center_horizontal"
            android:text="@string/pointsforfedere"/>
        <TextView
            android:id="@+id/nBoardPoints"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingBottom="30dp"
            android:textSize="50sp"
            android:gravity="center_horizontal"
            android:text="@string/pointsfotnadal"/>
    </LinearLayout>
<!-- View to draw a line between the main points and the game sets table -->
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#000000"/>
<!-- child LinearLayout#5 for all federe game sets table -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:padding="10dp"
            android:textSize="20sp"
            android:text="@string/FforFderer"/>
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#000000"/>
        <TextView
            android:id="@+id/set1ForF"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:padding="10dp"
            android:textSize="20sp"
            android:text="@string/pointsfotnadal"/>
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#000000"/>
        <TextView
            android:id="@+id/set2ForF"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:padding="10dp"
            android:textSize="20sp"
            android:text="@string/pointsfotnadal"/>
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#000000"/>
        <TextView
            android:id="@+id/set3ForF"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:padding="10dp"
            android:textSize="20sp"
            android:text="@string/pointsfotnadal"/>
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#000000"/>
        <TextView
            android:id="@+id/set4ForF"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:padding="10dp"
            android:textSize="20sp"
            android:text="@string/pointsfotnadal"/>
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#000000"/>
        <TextView
            android:id="@+id/set5ForF"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:padding="10dp"
            android:textSize="20sp"
            android:text="@string/pointsfotnadal"/>
    </LinearLayout>
<!-- View as a draw line between players game sets -->
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#000000"/>
<!-- child LinearLayout#6 for all Nadal game sets table -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:padding="10dp"
            android:textSize="20sp"
            android:text="@string/NforNadal"/>
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#000000"/>
        <TextView
            android:id="@+id/set1ForN"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:padding="10dp"
            android:textSize="20sp"
            android:text="@string/pointsfotnadal"/>
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#000000"/>
        <TextView
            android:id="@+id/set2ForN"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:padding="10dp"
            android:textSize="20sp"
            android:text="@string/pointsfotnadal"/>
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#000000"/>
        <TextView
            android:id="@+id/set3ForN"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:padding="10dp"
            android:textSize="20sp"
            android:text="@string/pointsfotnadal"/>
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#000000"/>
        <TextView
            android:id="@+id/set4ForN"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:padding="10dp"
            android:textSize="20sp"
            android:text="@string/pointsfotnadal"/>
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#000000"/>
        <TextView
            android:id="@+id/set5ForN"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:padding="10dp"
            android:textSize="20sp"
            android:text="@string/pointsfotnadal"/>
    </LinearLayout>
<!-- View as a last line in the sets table -->
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#000000"/>
<!-- child LinearLayout#7 holds the Buttons Horizontally -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:textColor="#FFFFFF"
            android:text="@string/hitforFederer"
            android:onClick="incrementPForF"/>
        <Button
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:textColor="#FFFFFF"
            android:text="@string/hitfornadal"
            android:onClick="incrementPForN"/>
    </LinearLayout>
<!-- reset button -->
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textColor="#FFFFFF"
        android:text="@string/rest"
        android:onClick="resetAll"/>

</LinearLayout>
